# cusplibrary

./: .gitignore  .hgignore  .svnignore  .travis.yml  CHANGELOG  CMakeLists.txt  README  README.md  _typos.toml  appveyor.yml  example.cu  readme-dev.md
.github/workflows/: ci.yml
cmake/: cuspConfig.cmake
cusp/: arithmetic.h  array1d.h  array2d.h  blas.h  cmath.h  complex.h  convert.h  coo_matrix.h  copy.h  csr_matrix.h  dense_matrix.h  dia_matrix.h  elementwise.h  ell_matrix.h  equal.h  exception.h  execution_policy.h  format.h  format_utils.h  functional.h  hyb_matrix.h  io.h  linear_operator.h  matrix_shape.h  memory.h  monitor.h  multilevel.h  multiply.h  permutation_matrix.h  print.h  sort.h  spblas.h  stopping_criteria.h  transpose.h  valid.h  vector.h  verify.h  version.h
cusp/blas/: blas.h  blas.h_new  blas.inl  blas_policy.h
cusp/blas/cblas/: blas.h  blas_policy.h  complex_stubs.h  defs.h  execution_policy.h  stubs.h
cusp/blas/cublas/: blas.h  blas_policy.h  defs.h  execution_policy.h  stubs.h
cusp/blas/thrustblas/: blas.h  (+1 more)
cusp/detail/: array1d.inl  array2d.inl  array2d_format_utils.h  blas.inl  config.h  convert.h  convert.inl  coo_matrix.inl  copy.inl  csr_matrix.inl  dia_matrix.inl  elementwise.inl  ell_matrix.inl  format.h  format_utils.h  format_utils.inl  forward_definitions.h  functional.h  functional.inl  hyb_matrix.inl  io.inl  lu.h  matrix_base.h  matrix_shape.h  matrix_traits.h  matrix_traits.inl  memory.inl  monitor.inl  multilevel.h  multilevel.inl  multiply.inl  permutation_matrix.inl  print.inl  profiler.h  profiler.inl  random.h  random.inl  sort.inl  spblas.inl  spectral_radius.h  (+9 more)
cusp/device/: elementwise_operation.h  spmv.h  spmv_coo.h  spmv_coo_flat.h  spmv_coo_serial.h  spmv_csr.h  spmv_csr_scalar.h  spmv_csr_vector.h  spmv_dia.h  spmv_ell.h  spmv_hyb.h  texture.h  utils.h
cusp/eigen/: arnoldi.h  lanczos.h  lanczos_options.h  lobpcg.h  spectral_radius.h
cusp/gallery/: diffusion.h  grid.h  poisson.h  random.h  stencil.h  stencil.inl
cusp/graph/: bfs.h  breadth_first_search.h  connected_components.h  hilbert_curve.h  hsfc.h  maximal_independent_set.h  maximum_flow.h  pseudo_peripheral.h  rcm.h  symmetric_rcm.h  vertex_coloring.h
cusp/host/: conversion.h  conversion_utils.h  elementwise_operation.h  scratch.h  spmv.h
cusp/io/: binary.h  dimacs.h  matrix_market.h
cusp/iterator/: iterator_traits.h  join_iterator.h  random_iterator.h  strided_iterator.h
cusp/krylov/: arnoldi.h  bicg.h  bicgstab.h  bicgstab_m.h  cg-m.h  cg.h  cg_m.h  cr.h  gmres.h
cusp/lapack/: lapack.h
cusp/plot/: convergence_plotter.h
cusp/precond/: aggregate.h  ainv.h  diagonal.h  smoothed_aggregation.h  strength.h
cusp/relaxation/: gauss_seidel.h  jacobi.h  polynomial.h  sor.h
cusp/support/: access.h  allocate.h  copy.h  duplicate.h
docs/: Doxyfile  DoxygenLayout.xml  header.html  mainpage.md  quickstart.md
examples/: CMakeLists.txt  SConstruct  cg.cu
examples/Algorithms/: blas.cu  maximal_independent_set.cu  multiply.cu  transpose.cu
examples/ConjugateGradient/: SConstruct  cg.cu
examples/Gallery/: diffusion.cu  poisson.cu
examples/Graph/: SConscript  breadth_first_search.cu  maximal_independent_set.cu  pseudo_peripheral.cu  symmetric_rcm.cu  vertex_coloring.cu
examples/InputOutput/: SConscript  matrix_market.cu
examples/LinearOperator/: SConscript  block_matrix.cu  stencil.cu
examples/MatrixAssembly/: unordered_triplets.cu
examples/MatrixFormats/: coo.cu  csr.cu  dia.cu  ell.cu  hyb.cu
examples/Monitors/: convergence_monitor.cu  default_monitor.cu  verbose_monitor.cu
examples/OpenGL/: SConscript  SConstruct  spy.cu
examples/Plotter/: smoothed_aggregation.cu
examples/Preconditioners/: ainv.cu  custom_amg.cu  diagonal.cu  smoothed_aggregation.cu
examples/Solvers/: bicgstab.cu  cg.cu  cg_m.cu  cr.cu  gmres.cu
examples/Version/: version.cu
examples/Views/: array1d.cu  array2d_raw.cu  cg_raw.cu  csr.cu  csr_raw.cu
performance/: SConstruct  benchmark.h  bytes_per_spmv.h  csr_vector.cu  gallery.h  spmv.cu  timer.h  utility.h
performance/amg/: SConstruct  smoothed_aggregation.cu
performance/blas/: SConscript  SConstruct  blas.cu  cublas.cu
performance/conversions/: SConstruct  conversions.cu  test.cu
performance/csr_to_coo/: test.cu
performance/csr_vector/: csr_vector.cu
performance/eigen/: SConscript  SConstruct  lobpcg.cu
performance/graph/: SConstruct  bfs.cu  breadth_first_search.cu  coloring.cu  connected_components.cu  hilbert_curve.cu  hsfc.cu  maximum_flow.cu  pseudo_peripheral.cu  rcm.cu  symmetric_rcm.cu  vertex_coloring.cu
performance/grapple/: SConscript  SConstruct  cg.cu  generate_policy.py  my_execution_policy.h
performance/mkl/: compile  main.cu  mkl.c  mkl.h
performance/overhead/: gauss_seidel.cu  memory.cu
performance/solver/: SConscript  cg.cu  test.cu
performance/spmm/: SConscript  SConstruct  spmm.cu  test.cu
performance/spmv/: SConscript  SConstruct  benchmark.h  bytes_per_spmv.h  spmv.cu  utility.h
python/: CMakeLists.txt  README.md  pyproject.toml
python/pycusp/: __init__.py  _core.pyi
python/src/: _core.cpp  _cuda.cu
python/tests/: conftest.py  test_cuda.py  test_spmv.py
testing/: SConscript  SConstruct  ainv.cu  amg.cu  arithmetic.cu  array1d.cu  array1d_view.cu  array2d.cu  array2d_view.cu  bicg.cu  bicgstab.cu  binary.cu  blas.cu  breadth_first_search.cu  cg.cu  cg_m.cu  classical_amg.cu  complex.cu  convert.cu  coo_matrix.cu  coo_matrix_view.cu  cr.cu  csr_matrix.cu  csr_matrix_view.cu  dense_matrix.cu  dia_matrix.cu  dia_matrix_view.cu  diagonal.cu  diffusion.cu  dimacs.cu  elementwise.cu  ell_matrix.cu  ell_matrix_view.cu  equal.cu  format.cu  format_utils.cu  gemm.cu  generalized_spgemm.cu  generalized_spmv.cu  gmres.cu  (+35 more)
testing/compile_tests/: SConscript  main.cu  readme.md
testing/external_libs/: SConscript  cblas.cu  cublas.cu  lapack.cu
testing/trivial_tests/: SConscript  SConstruct
testing/unittest/: assertions.h  exceptions.h  matrix.h  meta.h  random.h  special_types.h  system.h  testframework.h  unittest.h  util.h
workflows/: ci.yml
(+499 files in other folders)
