include_directories(${})
add_custom_target(all-examples)

function(add_example DIRNAME NAME)
  add_executable("${NAME}" "${DIRNAME}/${NAME}.cu")
  target_link_libraries("${NAME}" PUBLIC CCCL::CCCL)
  target_link_libraries("${NAME}" PUBLIC cusp)
  add_custom_target("run_${NAME}" COMMAND "${NAME}" VERBATIM)
  add_dependencies("run_${NAME}" "${NAME}")
  add_dependencies(all-examples "run_${NAME}")
endfunction()

# FIXME: add_example(Preconditioners ainv)
# FIXME: add_example(Preconditioners custom_amg)
# FIXME: add_example(Preconditioners diagonal)
# FIXME: add_example(Preconditioners smoothed_aggregation)
# FIXME: file(COPY ${CMAKE_CURRENT_LIST_DIR}/Preconditioners/A.mtx DESTINATION ${CMAKE_BINARY_DIR}/examples/Preconditioners/A.mtx)

add_example(Algorithms blas)
add_example(Algorithms multiply)
add_example(Algorithms transpose)

add_example(Solvers bicgstab)
add_example(Solvers bicgstab_m)
add_example(Solvers cg)
add_example(Solvers cg_m)
add_example(Solvers cr)
add_example(Solvers gmres)

add_example(Version version)

add_example(Views array1d)
add_example(Views array2d_raw)
add_example(Views cg_raw)
add_example(Views csr_raw)
add_example(Views csr_view)
